--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,9 @@
             android:layout_marginTop="50sp"
             android:padding="15dp"
             android:text="Login"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:onClick="login"
+            />
 
         <TextView
             android:layout_width="wrap_content"
