--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -49,43 +49,43 @@ NOMI DEGLI ID
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView2"
-            android:layout_width="144dp"
-            android:layout_height="144dp"
-            android:background="@color/principal"
-            android:padding="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
-            app:shapeAppearanceOverlay="@style/circular"
-            app:srcCompat="@drawable/person"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintStart_toStartOf="parent">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="100dp"
-            android:clickable="true"
-            app:srcCompat="@drawable/baseline_photo_camera_24"
-            tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
-            tools:layout_editor_absoluteX="222dp"
-            tools:layout_editor_absoluteY="96dp" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/imageView2"
+                android:layout_width="144dp"
+                android:layout_height="144dp"
+                android:background="@color/principal"
+                android:padding="5dp"
+                app:shapeAppearanceOverlay="@style/circular"
+                app:srcCompat="@drawable/person"
+                tools:ignore="MissingConstraints" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="20dp" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="4dp"
+                android:clickable="true"
+                app:layout_constraintBottom_toBottomOf="@id/imageView2"
+                app:layout_constraintEnd_toEndOf="@id/imageView2"
+                app:srcCompat="@drawable/baseline_photo_camera_24"
+                tools:ignore="MissingConstraints" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
     <!-- Secondo figlio: LinearLayout (70% dello schermo, colore rosso) -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -131,7 +131,7 @@ NOMI DEGLI ID
         <DatePicker
             android:id="@+id/date"
             android:layout_width="match_parent"
-            android:layout_height="226dp"
+            android:layout_height="249dp"
             android:calendarViewShown="false"
             android:datePickerMode="spinner"
             android:scaleX="0.9"
