--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,8 +12,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
-        android:background="@drawable/mount"
+        android:layout_weight="0.1"
+        android:background="@color/principal"
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_bias="0.5">
 
@@ -76,13 +76,16 @@
             />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/textView5"
+            android:layout_width="89dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="16dp"
+            android:onClick="registrazione"
             android:text="@string/registrati"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#3E3E3E"
-            android:clickable="true"
-            android:onClick="registrazione"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
     </LinearLayout>
 
