--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -14,173 +14,145 @@ NOMI DEGLI ID
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".activities.LoginActivity">
 
-    <!-- Primo figlio: ConstraintLayout (30% dello schermo, colore blu) -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:background="@drawable/mount"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.5">
+        android:background="@color/principal">
 
         <TextView
-            android:id="@+id/testoCentrato"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="REGISTRATION"
+            android:text="Register NOW"
             android:textColor="@color/white"
             android:textSize="40sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <!-- Contenuto del ConstraintLayout -->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_weight="0.7"
+        android:padding="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageView2"
+            android:layout_width="144dp"
+            android:layout_height="144dp"
+            android:background="@color/principal"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:shapeAppearanceOverlay="@style/circular"
+            app:srcCompat="@drawable/person"
+            tools:ignore="MissingConstraints" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imageView2"
-                android:layout_width="144dp"
-                android:layout_height="144dp"
-                android:background="@color/principal"
-                android:padding="5dp"
-                app:shapeAppearanceOverlay="@style/circular"
-                app:srcCompat="@drawable/person"
-                tools:ignore="MissingConstraints" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/floatingActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:clickable="true"
-                app:layout_constraintBottom_toBottomOf="@id/imageView2"
-                app:layout_constraintEnd_toEndOf="@id/imageView2"
-                app:srcCompat="@drawable/baseline_photo_camera_24"
-                tools:ignore="MissingConstraints" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-    <!-- Secondo figlio: LinearLayout (70% dello schermo, colore rosso) -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.7"
-        android:orientation="vertical"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="10dp"
-        android:paddingStart="50dp"
-        android:paddingEnd="50dp"
-        android:paddingBottom="100dp">
-
-
-
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:clickable="true"
+            app:layout_constraintBottom_toBottomOf="@id/imageView2"
+            app:layout_constraintEnd_toEndOf="@id/imageView2"
+            app:srcCompat="@drawable/baseline_photo_camera_24"
+            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:orientation="horizontal"
-
-            android:gravity="center">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
             <EditText
                 android:id="@+id/name"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:gravity="center"
+                android:layout_weight="1"
+                android:inputType="text"
+                android:minHeight="48dp"
                 android:hint="Name"
-                tools:ignore="TouchTargetSizeCheck" />
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/surname"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.4"
-                android:gravity="center"
+                android:layout_weight="1"
+                android:inputType="text"
+                android:minHeight="48dp"
                 android:hint="Surname"
-                tools:ignore="TouchTargetSizeCheck" />
-
+                tools:ignore="MissingConstraints" />
         </LinearLayout>
-
-        <DatePicker
-            android:id="@+id/date"
-            android:layout_width="match_parent"
-            android:layout_height="249dp"
-            android:calendarViewShown="false"
-            android:datePickerMode="spinner"
-            android:scaleX="0.9"
-            android:scaleY="0.5" />
-
-        <EditText
-            android:id="@+id/cell"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Cell +0123"
-            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
+            android:layout_marginTop="50dp"
+            android:hint="email"
             android:inputType="textEmailAddress"
-            android:hint="Email" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:minHeight="48dp"
+            android:layout_marginTop="10dp"
+            android:hint="password"
             android:inputType="textPassword"
-            android:hint="Password"  />
+            app:layout_constraintTop_toBottomOf="@+id/email" />
 
         <Button
-            android:layout_width="134dp"
-            android:layout_height="74dp"
-            android:layout_gravity="center_horizontal"
-
-            android:padding="15dp"
-            android:text="Register"
-            android:textSize="20sp" />
-
-        <TextView
+            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:clickable="true"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
+            android:onClick="registrazione"
+            android:text="REGISTER"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="89dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="16dp"
             android:onClick="login"
             android:text="@string/login_u"
-            android:textColor="#3E3E3E" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            android:gravity="center"/>
 
-    </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </LinearLayout>
