--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -69,7 +69,7 @@
             app:srcCompat="@drawable/baseline_photo_camera_24" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/EventName"
+            android:id="@+id/EventNameLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,6 +78,7 @@
             app:layout_constraintTop_toBottomOf="@+id/EventPhoto">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EventName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLength="20" />
@@ -85,7 +86,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/EventDescription"
+            android:id="@+id/EventDescriptionLayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -95,9 +96,10 @@
             app:counterMaxLength="100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/EventName">
+            app:layout_constraintTop_toBottomOf="@+id/EventNameLayout">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EventDescription"
                 android:layout_width="match_parent"
                 android:layout_height="77dp"
                 android:maxLength="100" />
@@ -108,7 +110,7 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/EventDescription">
+            app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout">
 
             <Button
                 android:id="@+id/date"
@@ -116,10 +118,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
+                android:layout_marginStart="72dp"
+                android:layout_marginTop="68dp"
                 android:layout_weight="1"
                 android:text="date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/EventDescription" />
+                app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout" />
 
             <Button
                 android:id="@+id/hour"
@@ -127,11 +131,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
+                android:layout_marginTop="48dp"
+                android:layout_marginEnd="44dp"
                 android:layout_weight="1"
                 android:text="hour"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/EventDescription" />
-
+                app:layout_constraintTop_toBottomOf="@+id/EventDescriptionLayout" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -148,5 +153,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
